sockshop/manifests/scenarios/istio/destination_rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-end-destination
  namespace: sockshop-production
spec:
  host: front-end
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
