sockshop/manifests/scenarios/istio/destination_rule_carts.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: carts-destination
  namespace: sockshop-production
spec:
  host: carts
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
