sockshop/manifests/scenarios/istio/virtual_service_50v1_50v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sockshop
  namespace: sockshop-production
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
    - uri:
        prefix: "/carts"
    route:
    - destination:
        host: carts
  - route:
    - destination:
        host: front-end
        subset: v1
      weight: 50 #v1
    - destination:
        host: front-end
        subset: v2
      weight: 50 #v2
