sockshop/manifests/scenarios/istio/virtual_service_carts_v1_only.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carts
  namespace: sockshop-production
spec:
  hosts:
  - carts
  http:
  - route:
    - destination:
        host: carts
        subset: v1
