sockshop/manifests/scenarios/istio/virtual_service_carts_v1_v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carts
  namespace: sockshop-production
spec:
  hosts:
  - carts
  http:
  - match:
    - sourceLabels:
        version: v2
    route:
    - destination:
        host: carts
        subset: v2
  - route:
    - destination:
        host: carts
        subset: v1
