sockshop/manifests/scenarios/istio/virtual_service_v2_for_chrome.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sockshop
  namespace: sockshop-production
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: front-end
        subset: v2
  - route:
    - destination:
        host: front-end
        subset: v1
